--- a/images_front_app/src/index.css
+++ b/images_front_app/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.body-container {
+  height: 100vh;  
+}
+
+.card-container {
+  height: 100%;
+}
+
+.card-style {
+  width: 18rem;
+  height: 60vh !important;
+}
