--- a/images_front_app/src/index.css
+++ b/images_front_app/src/index.css
@@ -35,3 +35,11 @@ code {
   height: 100% !important;
   background-size: contain !important;
 }
+
+.card-body{
+  width: 100% !important;
+}
+
+.card-buttons{
+  width: 100% !important;
+}
